Generate Time Deltas for var binned data. Minor code refactors for code readability.

--- a/student_life/src/configurations/feature_processing.yaml
+++ b/student_life/src/configurations/feature_processing.yaml
@@ -1,12 +1,12 @@
 features:
   activity_details:
     resample_freq_min: 1
-    simple_aggregates: ["min", "max", "count"]
+    simple_aggregates: ["min", "max"]
     custom_aggregates: ["mode"]
 
   audio_details:
     resample_freq_min: 1
-    simple_aggregates: ["min", "max", "count"]
+    simple_aggregates: ["min", "max"]
     custom_aggregates: ["mode"]
 
   conversation_details:
