--- a/student_life/src/configurations/data_getter_config.yaml
+++ b/student_life/src/configurations/data_getter_config.yaml
@@ -4,3 +4,7 @@ student_life_var_binned_data:
   'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum',
   'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']
   label_list: ['stress_level_mode']
+  train_set_size: 60
+  val_set_size: 20
+  # Test set is here for just a consistency, it will contain what ever is remaining.
+  test_set_size: 20
