Changes in plotting to handle saving better.

--- a/student_life/src/configurations/model_config.yaml
+++ b/student_life/src/configurations/model_config.yaml
@@ -6,4 +6,4 @@ gru_d:
   learning_rate:  0.2
   learning_rate_decay: 100
   epochs: 20
-  student_list: [35, 32, 36, 42, 43, 44, 1, 45, 49]
+  student_list: [35, 32, 36, 42, 43, 44, 1, 45]
