Processing of covariate. Current covariates are 1. Day of week 2. Epoch of day

--- a/student_life/src/configurations/feature_processing.yaml
+++ b/student_life/src/configurations/feature_processing.yaml
@@ -43,9 +43,15 @@ features:
     custom_aggregates: ["mode"]
 
   stress_details:
-    resample_freq_min: 1440
+    resample_freq_min: 720
     simple_aggregates: []
     custom_aggregates: ["mode"]
+
+covariates:
+  day_of_week: True
+  epoch_of_day: True
+  gender: False
+
 
 # Todo(@abhinavshaw) : Check this feature out. Data Doesn't make sense.
 #  call_log_details:
