--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -1,7 +1,7 @@
 student_life_var_binned_data:
   # Default student list for data manager.
   student_list: [35]
-  feature_list: ['activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum',
+  feature_list: ['day_of_week', 'epoch_of_day', 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum',
   'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum',
   'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']
   label_list: ['stress_level_mode']
