Covariate processing for time_to_next_labe and time_from_last_label.

--- a/student_life/src/configurations/feature_processing.yaml
+++ b/student_life/src/configurations/feature_processing.yaml
@@ -50,6 +50,8 @@ features:
 covariates:
   day_of_week: True
   epoch_of_day: True
+  time_since_last_label: True
+  time_to_next_label: True
   gender: False
 
 
