--- a/student_life/src/configurations/feature_processing.yaml
+++ b/student_life/src/configurations/feature_processing.yaml
@@ -1,51 +1,58 @@
 features:
   activity_details:
-    resample_freq_min: 1
-    simple_aggregates: ["min", "max"]
-    custom_aggregates: ["mode"]
+    resample_freq_min: 5
+    simple_aggregates: []
+    custom_aggregates: ["mode", "inferred_feature"]
+    propagation_type: "mode_fill"
 
   audio_details:
-    resample_freq_min: 1
-    simple_aggregates: ["min", "max"]
-    custom_aggregates: ["mode"]
+    resample_freq_min: 5
+    simple_aggregates: []
+    custom_aggregates: ["mode", "inferred_feature"]
+    propagation_type: "mode_fill"
 
   conversation_details:
-    resample_freq_min: 60
+    resample_freq_min: 5
     simple_aggregates: ["sum"]
     custom_aggregates: []
+    propagation_type: "none"
 
-  # Phone Charge details are aggregated every 12 hours.
   phonecharge_details:
-    resample_freq_min: 720 # Daily
-    simple_aggregates: ["sum"]
-    custom_aggregates: []
+    resample_freq_min: 5 # Daily
+    simple_aggregates: []
+    custom_aggregates: ["robust_sum"]
+    propagation_type: "mean_fill"
 
   phonelock_details:
-    resample_freq_min: 720
-    simple_aggregates: ["sum"]
-    custom_aggregates: []
+    resample_freq_min: 5
+    simple_aggregates: []
+    custom_aggregates: ["robust_sum"]
+    propagation_type: "mean_fill"
 
-  # Dark Details are aggregated every 6 hours.
   dark_details:
-    resample_freq_min: 360
-    simple_aggregates: ["sum"]
-    custom_aggregates: []
+    resample_freq_min: 5
+    simple_aggregates: []
+    custom_aggregates: ["robust_sum"]
+    propagation_type: "mean_fill"
 
-  # Dark Details are aggregated every day.
   sleep_details:
-    resample_freq_min: 1440
-    simple_aggregates: ["sum"]
-    custom_aggregates: []
+    resample_freq_min: 5
+    simple_aggregates: []
+    custom_aggregates: ["robust_sum"]
+    propagation_type: "forward_fill"
 
   gps_details:
-    resample_freq_min: 15
+    resample_freq_min: 5
     simple_aggregates: []
     custom_aggregates: ["mode"]
+    propagation_type: "forward_fill"
 
   stress_details:
-    resample_freq_min: 1
+    resample_freq_min: 60
     simple_aggregates: []
     custom_aggregates: ["mode"]
+    # `none` if no propagation required.
+    propagation_type: "none"
 
 covariates:
   day_of_week: True
@@ -54,6 +61,28 @@ covariates:
   time_to_next_label: True
   gender: False
 
+feature_imputation_stategy:
+  # Don't impute feature if not set to true.
+  impute_features: True
+  # Always no-op for student_id.
+  student_id: 'none'
+  day_of_week: 'none'
+  epoch_of_day: 'none'
+  time_since_last_label: 'mean_fill'
+  time_to_next_label: 'mean_fill'
+  activity_inference_mode: 'mode_fill'
+  activity_inference_inferred_feature: 'mode_fill'
+  audio_activity_inference_mode: 'mode_fill'
+  audio_activity_inference_inferred_feature: 'mode_fill'
+  conv_duration_min_sum: 'mean_fill'
+  phonecharge_duration_min_robust_sum: 'mean_fill'
+  phonelock_duration_min_robust_sum: 'mean_fill'
+  dark_duration_min_robust_sum: 'forward_fill'
+  hours_slept_robust_sum: 'mean_fill'
+  sleep_rating_robust_sum: 'mean_fill'
+  latitude_mode: 'forward_fill'
+  longitude_mode: 'forward_fill'
+  stress_level_mode: 'none'
 
 # Todo(@abhinavshaw) : Check this feature out. Data Doesn't make sense.
 #  call_log_details:
