fixed nan on aggreagated features column issues

--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -1,8 +1,8 @@
 student_life_var_binned_data:
   # Default student list for data manager.
   student_list: [35]
-  feature_list: ['day_of_week', 'epoch_of_day', 'time_since_last_label' , 'time_to_next_label',
-                 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum',
+  # feature_list: ['day_of_week', 'epoch_of_day', 'time_since_last_label' , 'time_to_next_label',
+  feature_list: [ 'activity_inference_mode', 'audio_activity_inference_mode', 'conv_duration_min_sum',
                  'dark_duration_min_sum', 'phonecharge_duration_min_sum', 'phonelock_duration_min_sum',
                  'latitude_mode', 'longitude_mode', 'hours_slept_sum', 'sleep_rating_sum']
   label_list: ['stress_level_mode']
@@ -11,6 +11,6 @@ student_life_var_binned_data:
   # Test set is here for just a consistency, it will contain what ever is remaining.
   test_set_size: 20
   time_deltas:
-    use_time_delta_based_processing: True
+    use_time_delta_based_processing: False
     time_delta_behind_from_label_h: 5
     time_delta_ahead_from_label_h: 1
