--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -1,19 +1,25 @@
 student_life_var_binned_data:
+  # Two splitting strategy supported - Days and Time Delta of hours from the labels.
+  default_splitting_strategy: 'time_delta'
   # Default student list for data manager.
   student_list: [35]
   feature_list: ['day_of_week', 'epoch_of_day', 'time_since_last_label' , 'time_to_next_label','previous_stress_label',
                  'time_to_next_deadline', 'activity_inference_inferred_feature', 'audio_activity_inference_inferred_feature',
                  'conv_duration_min_sum','dark_duration_min_robust_sum', 'phonecharge_duration_min_robust_sum',
                  'phonelock_duration_min_robust_sum',
-                 'latitude_mode', 'longitude_mode', 'hours_slept_robust_sum', 'sleep_rating_robust_sum']
+                 'hours_slept_robust_sum', 'sleep_rating_robust_sum']
+  # The covariates are flattened by taking the nearest value. If empty nothing will be flattened.
+  covariate_list: ['sleep_rating_robust_sum',
+                   'hours_slept_robust_sum',
+                   'phonecharge_duration_min_robust_sum',
+                   'previous_stress_label']
   label_list: ['stress_level_mode']
   train_set_size: 60
   val_set_size: 20
   # Test set is here for just a consistency, it will contain what ever is remaining.
   test_set_size: 20
   time_deltas:
-    use_time_delta_based_processing: True
-    time_delta_behind_from_label_h: 5
-    time_delta_ahead_from_label_h: 1
+    time_delta_behind_from_label_h: 6
+    time_delta_ahead_from_label_h: 0
   adjust_labels_wrt_median: True
   flatten_sequence_to_cols: False
