--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -11,6 +11,7 @@ student_life_var_binned_data:
                    'hours_slept_robust_sum',
                    'phonecharge_duration_min_robust_sum',
                    'previous_stress_label']
+  process_covariates_as_regular_features: False
   label_list: ['stress_level_mode']
   train_set_size: 60
   val_set_size: 20
