Implementation of separate covariate processing.

--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -22,3 +22,7 @@ student_life_var_binned_data:
     time_delta_ahead_from_label_h: 0
   adjust_labels_wrt_median: True
   flatten_sequence_to_cols: False
+  sub_sampling:
+    sub_sample_count: 10
+    # This cannot be more than the actual sequence length.
+    output_sequence_len: 36
