--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -3,13 +3,14 @@ student_life_var_binned_data:
   default_splitting_strategy: 'time_delta'
   # Default student list for data manager.
   student_list: [35]
-  feature_list: ['day_of_week', 'epoch_of_day', 'time_since_last_label' , 'time_to_next_label',
-                 'time_to_next_deadline', 'activity_inference_inferred_feature', 'audio_activity_inference_inferred_feature',
-                 'conv_duration_min_sum','dark_duration_min_robust_sum', 'phonelock_duration_min_robust_sum']
+  feature_list: ['epoch_of_day', 'time_since_last_label' , 'time_to_next_label',
+                 'time_to_next_deadline', 'activity_inference_inferred_feature','audio_activity_inference_inferred_feature',
+                 'conv_duration_min_inferred_mode','phonecharge_duration_min_inferred_mode', 'phonelock_duration_min_inferred_mode',
+                 'dark_duration_min_inferred_mode']
   # The covariates are flattened by taking the nearest value. If empty nothing will be flattened.
-  covariate_list: ['sleep_rating_robust_sum',
+  covariate_list: ['day_of_week',
+                   'sleep_rating_robust_sum',
                    'hours_slept_robust_sum',
-                   'phonecharge_duration_min_robust_sum',
                    'previous_stress_label']
   process_covariates_as_regular_features: False
   label_list: ['stress_level_mode']
@@ -18,7 +19,7 @@ student_life_var_binned_data:
   # Test set is here for just a consistency, it will contain what ever is remaining.
   test_set_size: 20
   time_deltas:
-    time_delta_behind_from_label_h: 6
+    time_delta_behind_from_label_h: 24
     time_delta_ahead_from_label_h: 0
   adjust_labels_wrt_median: True
   flatten_sequence_to_cols: False
