--- a/student_life/src/configurations/feature_processing.yaml
+++ b/student_life/src/configurations/feature_processing.yaml
@@ -133,8 +133,8 @@ explode_duration_based_features:
 students:
   # We use data only for students that have good data.
 #  student_list: [53, 46, 7, 49, 22, 24, 2]
-  student_list: []
-  # This list will override the student_list while selecting students.
+  student_list: [35, 14, 15, 16, 17, 18, 19, 2, 20, 22, 23, 24, 25, 27, 30, 31, 32, 33, 34, 1, 10, 12, 36, 39, 4, 41, 42, 43, 44, 45, 46, 47, 49, 5, 50, 51, 52, 53, 54, 56, 57, 58, 59, 7, 8, 9]
+#   This list will override the student_list while selecting students.
   student_ignore_list: [0,3,13]
 
 data_paths:
