--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -43,25 +43,25 @@ student_life_var_binned_data:
       custom_aggregates: ['time']
     activity_inference_mode:
       simple_aggregates: []
-      custom_aggregates: ['0', '1', '2', '3']
+      custom_aggregates: ['1', '2']
 #    activity_inference_inferred_feature:
 #      simple_aggregates: []
 #      custom_aggregates: ['0', '1', '2', '3']
-    audio_activity_inference_mode:
-      simple_aggregates: []
-      custom_aggregates: ['0', '1', '2', '3']
+#    audio_activity_inference_mode:
+#      simple_aggregates: []
+#      custom_aggregates: ['0', '1', '2', '3']
 #    audio_activity_inference_inferred_feature:
 #      simple_aggregates: []
 #      custom_aggregates: ['0', '1', '2']
     conv_duration_min_inferred_mode:
       simple_aggregates: []
-      custom_aggregates: ['0', '1']
+      custom_aggregates: ['1']
     phonecharge_duration_min_inferred_mode:
       simple_aggregates: []
-      custom_aggregates: ['0', '1']
+      custom_aggregates: ['1']
     phonelock_duration_min_inferred_mode:
       simple_aggregates: []
-      custom_aggregates: ['0', '1']
+      custom_aggregates: ['1']
     dark_duration_min_inferred_mode:
       simple_aggregates: []
-      custom_aggregates: ['0', '1']
+      custom_aggregates: ['1']
