--- a/student_life/src/configurations/data_manager_config.yaml
+++ b/student_life/src/configurations/data_manager_config.yaml
@@ -1,6 +1,7 @@
 student_life_var_binned_data:
   # Two splitting strategy supported - Days and Time Delta of hours from the labels.
   default_splitting_strategy: 'time_delta'
+  normalize_strategy: 'min_max'
   # Default student list for data manager.
   student_list: [35]
   feature_list: ['epoch_of_day', 'time_since_last_label' , 'time_to_next_label',
@@ -10,8 +11,7 @@ student_life_var_binned_data:
   # The covariates are flattened by taking the nearest value. If empty nothing will be flattened.
   covariate_list: ['day_of_week',
                    'sleep_rating_robust_sum',
-                   'hours_slept_robust_sum',
-                   'previous_stress_label']
+                   'hours_slept_robust_sum']
   process_covariates_as_regular_features: False
   label_list: ['stress_level_mode']
   train_set_size: 60
